Compiladores/Compilador de mini Javascript Expressoes/y.output
Terminals unused in grammar

    WHILE
    SETA


State 22 conflicts: 2 reduce/reduce
State 23 conflicts: 1 reduce/reduce
State 69 conflicts: 1 shift/reduce
State 72 conflicts: 12 shift/reduce
State 125 conflicts: 1 shift/reduce
State 128 conflicts: 1 shift/reduce


Grammar

    0 $accept: S $end

    1 S: CMDs

    2 CMDs: CMD CMDs
    3     | CMD

    4 CMD: ATRIB ';'
    5    | CMD_LET ';'
    6    | E ASM ';'
    7    | IF '(' E ')' CMD
    8    | IF '(' E ')' CMD ELSE CMD
    9    | FUNCTION ID '(' ')' CMD
   10    | FUNCTION ID '(' PARAMETERS ')' CMD
   11    | RETURN E ';'
   12    | FOR '(' ATRIB ';' E ';' ATRIB ')' CMD
   13    | BLOCO

   14 PARAMETERS: PARAMETERS ',' ID
   15           | ID

   16 CMD_LET: LET DECLARACOES

   17 BLOCO: '{' CMDs '}'
   18      | BLOCOVAZIO

   19 DECLARACOES: DECLARACAO ',' DECLARACOES
   20            | DECLARACAO

   21 DECLARACAO: ID '=' E
   22           | ID

   23 ATRIB: LVALUEPROP '=' ATRIB
   24      | ID '=' ATRIB
   25      | F

   26 LVALUEPROP: ATRIBUTOS

   27 RVALUE: ID '[' E ']'
   28       | ID '.' ID
   29       | ID '.' ID '[' E ']'
   30       | ID '.' ID '.' ID
   31       | ID '.' ID '.' ID '[' E ']'
   32       | ID '.' ID '(' ')'
   33       | ID '.' ID '(' VALORES ')'
   34       | ID '.' ID '[' E ']' '(' VALORES ')'
   35       | ID '[' E ']' '(' VALORES ')'
   36       | ID '.' ID '.' ID '[' E ']' '(' VALORES ')'
   37       | ID
   38       | '{' VALORES '}'

   39 ATRIBUTOS: ID '[' ID ']' ATRIBUTOS
   40          | ID '.' ID ATRIBUTOS
   41          | ID '[' ID ']'
   42          | ID '.' ID
   43          | ID '.' ID '[' E ']'
   44          | ID '.' ID '.' ID
   45          | ID '.' ID '.' ID '[' E ']'
   46          | ID '.' ID '(' ')'
   47          | ID '.' ID '(' VALORES ')'
   48          | ID '.' ID '[' ID ']' '(' VALORES ')'
   49          | ID '[' ID ']' '(' VALORES ')'
   50          | ID '.' ID '.' ID '[' E ']' '(' VALORES ')'

   51 E: E '^' E
   52  | E '<' E
   53  | E '>' E
   54  | E MAIOR_IGUAL E
   55  | E DIF E
   56  | E MENOR_IGUAL E
   57  | E IGUAL E
   58  | E '*' E
   59  | E '+' E
   60  | E '-' E
   61  | E '/' E
   62  | E '%' E
   63  | F

   64 F: RVALUE
   65  | NUM
   66  | STRING
   67  | ID '=' E
   68  | BLOCOVAZIO
   69  | '[' ']'
   70  | '(' E ')'
   71  | ID '(' ')'
   72  | ID '(' VALORES ')'
   73  | ID ':' E

   74 VALORES: VALORES ',' E
   75        | E

   76 BLOCOVAZIO: '{' '}'


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 62
    '(' (40) 7 8 9 10 12 32 33 34 35 36 46 47 48 49 50 70 71 72
    ')' (41) 7 8 9 10 12 32 33 34 35 36 46 47 48 49 50 70 71 72
    '*' (42) 58
    '+' (43) 59
    ',' (44) 14 19 74
    '-' (45) 60
    '.' (46) 28 29 30 31 32 33 34 36 40 42 43 44 45 46 47 48 50
    '/' (47) 61
    ':' (58) 73
    ';' (59) 4 5 6 11 12
    '<' (60) 52
    '=' (61) 21 23 24 67
    '>' (62) 53
    '[' (91) 27 29 31 34 35 36 39 41 43 45 48 49 50 69
    ']' (93) 27 29 31 34 35 36 39 41 43 45 48 49 50 69
    '^' (94) 51
    '{' (123) 17 38 76
    '}' (125) 17 38 76
    error (256)
    NUM (258) 65
    ID (259) 9 10 14 15 21 22 24 27 28 29 30 31 32 33 34 35 36 37 39 40 41 42 43 44 45 46 47 48 49 50 67 71 72 73
    LET (260) 16
    STRING (261) 66
    IF (262) 7 8
    ELSE (263) 8
    WHILE (264)
    FOR (265) 12
    MAIOR_IGUAL (266) 54
    MENOR_IGUAL (267) 56
    IGUAL (268) 57
    DIF (269) 55
    SETA (270)
    FUNCTION (271) 9 10
    RETURN (272) 11
    ASM (273) 6


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    S (39)
        on left: 1
        on right: 0
    CMDs (40)
        on left: 2 3
        on right: 1 2 17
    CMD (41)
        on left: 4 5 6 7 8 9 10 11 12 13
        on right: 2 3 7 8 9 10 12
    PARAMETERS (42)
        on left: 14 15
        on right: 10 14
    CMD_LET (43)
        on left: 16
        on right: 5
    BLOCO (44)
        on left: 17 18
        on right: 13
    DECLARACOES (45)
        on left: 19 20
        on right: 16 19
    DECLARACAO (46)
        on left: 21 22
        on right: 19 20
    ATRIB (47)
        on left: 23 24 25
        on right: 4 12 23 24
    LVALUEPROP (48)
        on left: 26
        on right: 23
    RVALUE (49)
        on left: 27 28 29 30 31 32 33 34 35 36 37 38
        on right: 64
    ATRIBUTOS (50)
        on left: 39 40 41 42 43 44 45 46 47 48 49 50
        on right: 26 39 40
    E (51)
        on left: 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 6 7 8 11 12 21 27 29 31 34 35 36 43 45 50 51 52 53 54 55 56 57 58 59 60 61 62 67 70 73 74 75
    F (52)
        on left: 64 65 66 67 68 69 70 71 72 73
        on right: 25 63
    VALORES (53)
        on left: 74 75
        on right: 33 34 35 36 38 47 48 49 50 72 74
    BLOCOVAZIO (54)
        on left: 76
        on right: 18 68


State 0

    0 $accept: . S $end

    NUM       shift, and go to state 1
    ID        shift, and go to state 2
    LET       shift, and go to state 3
    STRING    shift, and go to state 4
    IF        shift, and go to state 5
    FOR       shift, and go to state 6
    FUNCTION  shift, and go to state 7
    RETURN    shift, and go to state 8
    '('       shift, and go to state 9
    '{'       shift, and go to state 10
    '['       shift, and go to state 11

    S           go to state 12
    CMDs        go to state 13
    CMD         go to state 14
    CMD_LET     go to state 15
    BLOCO       go to state 16
    ATRIB       go to state 17
    LVALUEPROP  go to state 18
    RVALUE      go to state 19
    ATRIBUTOS   go to state 20
    E           go to state 21
    F           go to state 22
    BLOCOVAZIO  go to state 23


State 1

   65 F: NUM .

    $default  reduce using rule 65 (F)


State 2

   24 ATRIB: ID . '=' ATRIB
   27 RVALUE: ID . '[' E ']'
   28       | ID . '.' ID
   29       | ID . '.' ID '[' E ']'
   30       | ID . '.' ID '.' ID
   31       | ID . '.' ID '.' ID '[' E ']'
   32       | ID . '.' ID '(' ')'
   33       | ID . '.' ID '(' VALORES ')'
   34       | ID . '.' ID '[' E ']' '(' VALORES ')'
   35       | ID . '[' E ']' '(' VALORES ')'
   36       | ID . '.' ID '.' ID '[' E ']' '(' VALORES ')'
   37       | ID .
   39 ATRIBUTOS: ID . '[' ID ']' ATRIBUTOS
   40          | ID . '.' ID ATRIBUTOS
   41          | ID . '[' ID ']'
   42          | ID . '.' ID
   43          | ID . '.' ID '[' E ']'
   44          | ID . '.' ID '.' ID
   45          | ID . '.' ID '.' ID '[' E ']'
   46          | ID . '.' ID '(' ')'
   47          | ID . '.' ID '(' VALORES ')'
   48          | ID . '.' ID '[' ID ']' '(' VALORES ')'
   49          | ID . '[' ID ']' '(' VALORES ')'
   50          | ID . '.' ID '.' ID '[' E ']' '(' VALORES ')'
   67 F: ID . '=' E
   71  | ID . '(' ')'
   72  | ID . '(' VALORES ')'
   73  | ID . ':' E

    '='  shift, and go to state 24
    '('  shift, and go to state 25
    '['  shift, and go to state 26
    '.'  shift, and go to state 27
    ':'  shift, and go to state 28

    $default  reduce using rule 37 (RVALUE)


State 3

   16 CMD_LET: LET . DECLARACOES

    ID  shift, and go to state 29

    DECLARACOES  go to state 30
    DECLARACAO   go to state 31


State 4

   66 F: STRING .

    $default  reduce using rule 66 (F)


State 5

    7 CMD: IF . '(' E ')' CMD
    8    | IF . '(' E ')' CMD ELSE CMD

    '('  shift, and go to state 32


State 6

   12 CMD: FOR . '(' ATRIB ';' E ';' ATRIB ')' CMD

    '('  shift, and go to state 33


State 7

    9 CMD: FUNCTION . ID '(' ')' CMD
   10    | FUNCTION . ID '(' PARAMETERS ')' CMD

    ID  shift, and go to state 34


State 8

   11 CMD: RETURN . E ';'

    NUM     shift, and go to state 1
    ID      shift, and go to state 35
    STRING  shift, and go to state 4
    '('     shift, and go to state 9
    '{'     shift, and go to state 36
    '['     shift, and go to state 11

    RVALUE      go to state 19
    E           go to state 37
    F           go to state 38
    BLOCOVAZIO  go to state 39


State 9

   70 F: '(' . E ')'

    NUM     shift, and go to state 1
    ID      shift, and go to state 35
    STRING  shift, and go to state 4
    '('     shift, and go to state 9
    '{'     shift, and go to state 36
    '['     shift, and go to state 11

    RVALUE      go to state 19
    E           go to state 40
    F           go to state 38
    BLOCOVAZIO  go to state 39


State 10

   17 BLOCO: '{' . CMDs '}'
   38 RVALUE: '{' . VALORES '}'
   76 BLOCOVAZIO: '{' . '}'

    NUM       shift, and go to state 1
    ID        shift, and go to state 2
    LET       shift, and go to state 3
    STRING    shift, and go to state 4
    IF        shift, and go to state 5
    FOR       shift, and go to state 6
    FUNCTION  shift, and go to state 7
    RETURN    shift, and go to state 8
    '('       shift, and go to state 9
    '{'       shift, and go to state 10
    '}'       shift, and go to state 41
    '['       shift, and go to state 11

    CMDs        go to state 42
    CMD         go to state 14
    CMD_LET     go to state 15
    BLOCO       go to state 16
    ATRIB       go to state 17
    LVALUEPROP  go to state 18
    RVALUE      go to state 19
    ATRIBUTOS   go to state 20
    E           go to state 43
    F           go to state 22
    VALORES     go to state 44
    BLOCOVAZIO  go to state 23


State 11

   69 F: '[' . ']'

    ']'  shift, and go to state 45


State 12

    0 $accept: S . $end

    $end  shift, and go to state 46


State 13

    1 S: CMDs .

    $default  reduce using rule 1 (S)


State 14

    2 CMDs: CMD . CMDs
    3     | CMD .

    NUM       shift, and go to state 1
    ID        shift, and go to state 2
    LET       shift, and go to state 3
    STRING    shift, and go to state 4
    IF        shift, and go to state 5
    FOR       shift, and go to state 6
    FUNCTION  shift, and go to state 7
    RETURN    shift, and go to state 8
    '('       shift, and go to state 9
    '{'       shift, and go to state 10
    '['       shift, and go to state 11

    $default  reduce using rule 3 (CMDs)

    CMDs        go to state 47
    CMD         go to state 14
    CMD_LET     go to state 15
    BLOCO       go to state 16
    ATRIB       go to state 17
    LVALUEPROP  go to state 18
    RVALUE      go to state 19
    ATRIBUTOS   go to state 20
    E           go to state 21
    F           go to state 22
    BLOCOVAZIO  go to state 23


State 15

    5 CMD: CMD_LET . ';'

    ';'  shift, and go to state 48


State 16

   13 CMD: BLOCO .

    $default  reduce using rule 13 (CMD)


State 17

    4 CMD: ATRIB . ';'

    ';'  shift, and go to state 49


State 18

   23 ATRIB: LVALUEPROP . '=' ATRIB

    '='  shift, and go to state 50


State 19

   64 F: RVALUE .

    $default  reduce using rule 64 (F)


State 20

   26 LVALUEPROP: ATRIBUTOS .

    $default  reduce using rule 26 (LVALUEPROP)


State 21

    6 CMD: E . ASM ';'
   51 E: E . '^' E
   52  | E . '<' E
   53  | E . '>' E
   54  | E . MAIOR_IGUAL E
   55  | E . DIF E
   56  | E . MENOR_IGUAL E
   57  | E . IGUAL E
   58  | E . '*' E
   59  | E . '+' E
   60  | E . '-' E
   61  | E . '/' E
   62  | E . '%' E

    MAIOR_IGUAL  shift, and go to state 51
    MENOR_IGUAL  shift, and go to state 52
    IGUAL        shift, and go to state 53
    DIF          shift, and go to state 54
    ASM          shift, and go to state 55
    '<'          shift, and go to state 56
    '>'          shift, and go to state 57
    '+'          shift, and go to state 58
    '-'          shift, and go to state 59
    '*'          shift, and go to state 60
    '/'          shift, and go to state 61
    '%'          shift, and go to state 62
    '^'          shift, and go to state 63


State 22

   25 ATRIB: F .
   63 E: F .

    ';'       reduce using rule 25 (ATRIB)
    ';'       [reduce using rule 63 (E)]
    ')'       reduce using rule 25 (ATRIB)
    ')'       [reduce using rule 63 (E)]
    $default  reduce using rule 63 (E)


State 23

   18 BLOCO: BLOCOVAZIO .
   68 F: BLOCOVAZIO .

    $end      reduce using rule 18 (BLOCO)
    NUM       reduce using rule 18 (BLOCO)
    ID        reduce using rule 18 (BLOCO)
    LET       reduce using rule 18 (BLOCO)
    STRING    reduce using rule 18 (BLOCO)
    IF        reduce using rule 18 (BLOCO)
    ELSE      reduce using rule 18 (BLOCO)
    FOR       reduce using rule 18 (BLOCO)
    FUNCTION  reduce using rule 18 (BLOCO)
    RETURN    reduce using rule 18 (BLOCO)
    '('       reduce using rule 18 (BLOCO)
    '{'       reduce using rule 18 (BLOCO)
    '}'       reduce using rule 18 (BLOCO)
    '}'       [reduce using rule 68 (F)]
    '['       reduce using rule 18 (BLOCO)
    $default  reduce using rule 68 (F)


State 24

   24 ATRIB: ID '=' . ATRIB
   67 F: ID '=' . E

    NUM     shift, and go to state 1
    ID      shift, and go to state 2
    STRING  shift, and go to state 4
    '('     shift, and go to state 9
    '{'     shift, and go to state 36
    '['     shift, and go to state 11

    ATRIB       go to state 64
    LVALUEPROP  go to state 18
    RVALUE      go to state 19
    ATRIBUTOS   go to state 20
    E           go to state 65
    F           go to state 22
    BLOCOVAZIO  go to state 39


State 25

   71 F: ID '(' . ')'
   72  | ID '(' . VALORES ')'

    NUM     shift, and go to state 1
    ID      shift, and go to state 35
    STRING  shift, and go to state 4
    '('     shift, and go to state 9
    ')'     shift, and go to state 66
    '{'     shift, and go to state 36
    '['     shift, and go to state 11

    RVALUE      go to state 19
    E           go to state 67
    F           go to state 38
    VALORES     go to state 68
    BLOCOVAZIO  go to state 39


State 26

   27 RVALUE: ID '[' . E ']'
   35       | ID '[' . E ']' '(' VALORES ')'
   39 ATRIBUTOS: ID '[' . ID ']' ATRIBUTOS
   41          | ID '[' . ID ']'
   49          | ID '[' . ID ']' '(' VALORES ')'

    NUM     shift, and go to state 1
    ID      shift, and go to state 69
    STRING  shift, and go to state 4
    '('     shift, and go to state 9
    '{'     shift, and go to state 36
    '['     shift, and go to state 11

    RVALUE      go to state 19
    E           go to state 70
    F           go to state 38
    BLOCOVAZIO  go to state 39


State 27

   28 RVALUE: ID '.' . ID
   29       | ID '.' . ID '[' E ']'
   30       | ID '.' . ID '.' ID
   31       | ID '.' . ID '.' ID '[' E ']'
   32       | ID '.' . ID '(' ')'
   33       | ID '.' . ID '(' VALORES ')'
   34       | ID '.' . ID '[' E ']' '(' VALORES ')'
   36       | ID '.' . ID '.' ID '[' E ']' '(' VALORES ')'
   40 ATRIBUTOS: ID '.' . ID ATRIBUTOS
   42          | ID '.' . ID
   43          | ID '.' . ID '[' E ']'
   44          | ID '.' . ID '.' ID
   45          | ID '.' . ID '.' ID '[' E ']'
   46          | ID '.' . ID '(' ')'
   47          | ID '.' . ID '(' VALORES ')'
   48          | ID '.' . ID '[' ID ']' '(' VALORES ')'
   50          | ID '.' . ID '.' ID '[' E ']' '(' VALORES ')'

    ID  shift, and go to state 71


State 28

   73 F: ID ':' . E

    NUM     shift, and go to state 1
    ID      shift, and go to state 35
    STRING  shift, and go to state 4
    '('     shift, and go to state 9
    '{'     shift, and go to state 36
    '['     shift, and go to state 11

    RVALUE      go to state 19
    E           go to state 72
    F           go to state 38
    BLOCOVAZIO  go to state 39


State 29

   21 DECLARACAO: ID . '=' E
   22           | ID .
